WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59052
[Mac] Correction panel shows up at incorrect location after webpage is scrolled.
https://bugs.webkit.org/show_bug.cgi?id=59052
Summary
[Mac] Correction panel shows up at incorrect location after webpage is scrolled.
Jia Pu
Reported
2011-04-20 17:50:41 PDT
While I was working on
bug 57353
, Morita was working on
bug 55571
. So the patch for
bug 55571
ended up moving older implementation of Editor::windowRectForRange() to SpellingCorrectionController::windowRectForRange().
Attachments
Patch (v1)
(3.57 KB, patch)
2011-04-20 18:15 PDT
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2011-04-20 17:52:45 PDT
<
rdar://problem/9312513
>
Jia Pu
Comment 2
2011-04-20 18:15:26 PDT
Created
attachment 90463
[details]
Patch (v1)
Maciej Stachowiak
Comment 3
2011-04-20 19:02:48 PDT
Comment on
attachment 90463
[details]
Patch (v1) r=me
WebKit Commit Bot
Comment 4
2011-04-20 20:02:43 PDT
Comment on
attachment 90463
[details]
Patch (v1) Clearing flags on attachment: 90463 Committed
r84459
: <
http://trac.webkit.org/changeset/84459
>
WebKit Commit Bot
Comment 5
2011-04-20 20:02:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug