Source/WebCore/editing/Editor.cpp
@@ -3227,21 +3227,7 @@ bool Editor::selectionStartHasMarkerFor(DocumentMarker::MarkerType markerType, i
     }
 
     return false;
-}
-
-FloatRect Editor::windowRectForRange(const Range* range) const
-{
-    FrameView* view = frame()->view();
-    if (!view)
-        return FloatRect();
-    Vector<FloatQuad> textQuads;
-    range->textQuads(textQuads);
-    FloatRect boundingRect;
-    size_t size = textQuads.size();
-    for (size_t i = 0; i < size; ++i)
-        boundingRect.unite(textQuads[i].boundingBox());
-    return view->contentsToWindow(IntRect(boundingRect));
-}        
+}       
 
 TextCheckingTypeMask Editor::textCheckingTypeMaskFor(TextCheckingOptions textCheckingOptions)
 {
